benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix043.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix043.oepc.yml/mix043.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix043.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_pda472gw/tmp/tmp72vfrvtg.c
Compilation started
/tmp/BenchExec_run_pda472gw/tmp/tmp72vfrvtg.c: In function ‘P3’:
/tmp/BenchExec_run_pda472gw/tmp/tmp72vfrvtg.c:662:19: error: ‘FALSE’ undeclared (first use in this function)
  662 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_pda472gw/tmp/tmp72vfrvtg.c:662:19: note: each undeclared identifier is reported only once for each function it appears in

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
